--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 html, body {
    min-height: 100vh;
+   font-family: 'Open Sans', sans-serif;
+   letter-spacing: .1rem;
    margin: 0;
    padding: 0;
    text-align:center; 
-   color: rgb(126, 9, 9); 
 }
 
+h1 {
+   padding-top: 1rem;
+}
+
+img {
+   border-radius: 50%;
+}
+
+p {
+   padding-top: .5rem;
+}
+
+span {
+   font-size: 2rem;
+}
+
+a:link, a:visited, a:active {
+   text-decoration: none;
+   color: cadetblue;
+   padding: .5rem;
+}
 
    
