--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,20 @@ a:link, a:visited, a:active {
    font-size: 20px;
 }
 
-li {
-   text-align-last: center;
-   font-size: 15px;
+ul {
+   max-width: 20rem;
+   margin: auto;
+   list-style: none;
+}
 
+li {
+   font-size: 1rem;
+   padding: .5rem;
+   border-bottom: 1px dashed #000000;
+   text-align: left;
+}
+
+ul li:last-child {
+   border-bottom: none;
 }
 
